<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/red"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_movie_background"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/no_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/overlay_dark_30" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar.Default"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_round_left"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:title="" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <com.ramijemli.percentagechartview.PercentageChartView
                android:id="@+id/rating"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="10dp"
                app:pcv_animDuration="800"
                app:pcv_animInterpolator="accelerate_decelerate"
                app:pcv_backgroundBarColor="@color/grey"
                app:pcv_backgroundBarThickness="4dp"
                app:pcv_mode="ring"
                app:pcv_orientation="clockwise"
                app:pcv_progress="0"
                app:pcv_progressBarThickness="4dp"
                app:pcv_startAngle="270"
                app:pcv_textColor="@color/red"
                app:pcv_textSize="16sp"
                app:pcv_textStyle="bold" />

            <TextView
                android:id="@+id/genre_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/genre_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genre_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />

            <TextView
                android:id="@+id/status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/status_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/summary_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/summary_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:backgroundTint="@color/red"
                android:text="@string/share"
                android:textStyle="bold"
                app:icon="@drawable/ic_round_share"
                app:iconGravity="textStart" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/red"
        android:clickable="true"
        android:contentDescription="@string/cd_favorite_button"
        android:focusable="true"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_round_favorite_border"
        app:tint="@color/white" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/red"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>