<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/selector_menu_movie"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_round_tv"
        android:title="@string/title_tv_show" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_round_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/selector_menu_favorite"
        android:title="@string/title_favorite" />

</menu>