...
                    android:id="@+id/card_search"
                    style="@style/CardView.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="42dp">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:theme="@style/SearchView.Default"
                        app:queryHint="@string/hint_search" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
...
